[package]
name = "cats_destroyer_2000"
version = "0.1.0"
authors = ["Olf EPAIN aka Wabtey <wabtey@disroot.org>", "???"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.9", features = ["dynamic"] }
bevy_ecs = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = "0.9"
bevy_ecs = "0.9"
wasm-bindgen = "0.2"

[dependencies]
# ----- Hitbox - Velocity -----
bevy_rapier2d = { version = "0.19", features = ["simd-stable", "debug-render"] }

# ----------- Debug -----------
bevy-inspector-egui = "0.15"
log = "0.4.17"

# ----------- Other -----------
# bevy_tweening = "0.6"
image = "0.23"
# rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
