[package]
name = "cats_destroyer_2000"
version = "0.3.0"
authors = ["Olf EPAIN aka Wabtey <wabtey@disroot.org>", "???"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = "0.10"
bevy-inspector-egui = "0.18"
bevy_rapier2d = { version = "0.21", features = ["simd-stable", "debug-render-2d"] }

image = "0.23"

log = "0.4.17"
# rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
