[package]
name = "cats_destroyer_2000"
version = "1.0.0"
authors = ["Olf EPAIN aka Wabtey <wabtey@disroot.org>", "???"]
edition = "2021"
description = "Puzzle game where you play as a mind-manipulating blue hacker cat to escape the BadCats laboratory."
repository = "https://github.com/Fabinistere/cats_destroyer_2000"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "puzzle", "mind-control", "game", "hack", "cat"]
exclude = ["assets"]

[dependencies]
bevy = "0.14" # features = ["dynamic_linking"]
bevy_rapier2d = { version = "0.27", features = ["simd-stable", "debug-render-2d"] }
bevy-inspector-egui = "0.25"

# ----- Utilitaries -----
image = "0.23"
log = "0.4.17"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
